# cpp-template

./: .emacs  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Vagrantfile
.cmake/: benchmark.cmake  gtest.cmake
include/: 01.hpp
src/: 01.cpp  CMakeLists.txt
test/: CMakeLists.txt
test/catch/: 01_test.cpp  CMakeLists.txt
test/catch/lib/: CMakeLists.txt  header_only.cpp  num_gen.cpp  simplelib.cpp
test/perf/: CMakeLists.txt  string.cpp
test/unit/: 01_test.cpp  CMakeLists.txt
test/unit/lib/: CMakeLists.txt
vagrant.d/: 00-install-dev-tools
